tests/calico_testcases/example_policies/testcase25-mix-k8s-calico-policies/testcase25-networkpolicy-calico-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testcase25-networkpolicy #-k8s
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: kube-fluentd
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            tier: frontend

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase25-networkpolicy #-calico
  namespace: kube-system
spec:
  order: 2000
  selector: tier == 'frontend'
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'kube-fluentd'
