tests/calico_testcases/example_policies/testcase25-mix-k8s-calico-policies/testcase25-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: testcase25-config-1
    networkPolicyList:
      - testcase25-networkpolicy-calico-k8s.yaml
    expectedWarnings: 0

queries:
  - name: connectivity
    connectivityMap:
      - testcase25-config-1
    expected: 0
